stateless-poc-I/kubernetes-manifests/misc/brianApache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
spec:
  selector:
    matchLabels:
      app: apache
  replicas: 1
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: dockerregistry:5000/rhel6-httpd
        ports:
          - containerPort: 80
          - containerPort: 443
        command: ["/bin/bash"]
        args: ["-c","while true; do sleep 10;done"]
