stateless-poc-I/kubernetes-manifests/misc/apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app: apache
